--- a/html-GIS/Lacis.html
+++ b/html-GIS/Lacis.html
@@ -350,7 +350,7 @@
                                         <div class="card-icon-container">
                                             <i class="ti ti-database"></i> </div>
                                         <div class="servicio card-body">
-                                            <h5 class="servicio-titulo card-title fw-bold">Proveer Recursos para Investigación</h5>
+                                            <h5 class="servicio-titulo card-title fw-bold">Proveer Recursos</h5>
                                             <button class="btn boton-efecto mt-4 flip-btn">Ver más</button>
                                         </div>
                                     </div>
