--- a/html-GIS/Lacis.html
+++ b/html-GIS/Lacis.html
@@ -358,7 +358,7 @@
                                 <div class="carta-trasera">
                                     <div class="card mx-auto shadow-sm">
                                         <div class="servicio card-body">
-                                            <h5 class="servicio-titulo card-title fw-bold">Proveer Recursos</h5>
+                                            <h5 class="servicio-titulo card-title fw-bold">Proveer Recursos para Investigacion</h5>
                                             <p class="card-text text-start text-muted">Brindar y facilitar a los investigadores toda aquella información necesaria para acceder a los bancos de datos existentes nacionales e internacionales.</p>
                                             <button class="btn boton-efecto mt-4 flip-btn">volver</button>
                                         </div>
