--- a/html-GIS/Proyecto.html
+++ b/html-GIS/Proyecto.html
@@ -50,7 +50,7 @@
 
     <!-- 1. Título centrado -->
     <div class="seccion-servicios text-center my-5 blur-in">
-      <h2 class="titulo-seccion">Software <span>Engineering</span></h2>
+      <h2 class="titulo-seccion">Software <span>Engineering</span> Projects</h2>
       <p class="descripcion-seccion mt-3">
         Somos una comunidad académica dedicada a abordar desafíos complejos en la especificación, diseño, desarrollo y evolución de sistemas de software. Nos enfocamos en la creación de conocimientos avanzados, soluciones tecnológicas innovadoras y la formación de talento especializado, promoviendo la colaboración con la industria para asegurar que los resultados de la investigación tengan un impacto significativo en el mundo real. Además, buscamos liderar en la generación de tecnologías que permitan la transformación digital y el avance de la ingeniería de software como disciplina.    
       </p>
