--- a/html-GIS/Proyecto.html
+++ b/html-GIS/Proyecto.html
@@ -50,7 +50,7 @@
 
     <!-- 1. Título centrado -->
     <div class="seccion-servicios text-center my-5 blur-in">
-      <h2 class="titulo-seccion">Software <span>Engineering</span> Projects</h2>
+      <h2 class="titulo-seccion">Software Engineering <span>Projects</span></h2>
       <p class="descripcion-seccion mt-3">
         Somos una comunidad académica dedicada a abordar desafíos complejos en la especificación, diseño, desarrollo y evolución de sistemas de software. Nos enfocamos en la creación de conocimientos avanzados, soluciones tecnológicas innovadoras y la formación de talento especializado, promoviendo la colaboración con la industria para asegurar que los resultados de la investigación tengan un impacto significativo en el mundo real. Además, buscamos liderar en la generación de tecnologías que permitan la transformación digital y el avance de la ingeniería de software como disciplina.    
       </p>
@@ -67,7 +67,7 @@
 
         <div class="col-md-8 d-flex flex-column justify-content-start ps-4" id="listaNom2">
           <h3 id="titulo-proyecto" class="text-primary mt-3">Nombre del Proyecto</h3>
-          <h6 id="periodo-proyecto" class="text-muted">Período: 2024 - 2025</h6>
+          <h6 id="periodo-proyecto" class="text-muted">Período: Inicio - Fin</h6>
           <p id="info-proyecto" class="mt-3">descripcion</p>
         </div>
 
