--- a/html-GIS/Proyecto.html
+++ b/html-GIS/Proyecto.html
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="row justify-content-center">      
           
-          <div class="col-6  mb-4" data-aos="flip-right">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="flip-right">
             <div class="card-flip mx-auto">
               <div class="card-flip-inner">
                 <div class="card-flip-front">
@@ -132,7 +132,7 @@
             </div>
           </div>
           
-          <div class="col-6  mb-4" data-aos="flip-left">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="flip-left">
             <div class="card-flip mx-auto">
               <div class="card-flip-inner">
                 <div class="card-flip-front">
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="col-6  mb-4" data-aos="flip-left">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="flip-left">
             <div class="card-flip mx-auto">
               <div class="card-flip-inner">
                 <div class="card-flip-front">
@@ -158,7 +158,7 @@
             </div>
           </div>
 
-          <div class="col-6  mb-4" data-aos="flip-left">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="flip-left">
             <div class="card-flip mx-auto">
               <div class="card-flip-inner">
                 <div class="card-flip-front">
