--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <p class="text-secondary mb-0">© 2025 Universidad Nacional de San Luis. Todos los derechos reservados.</p>
       </div>
       <div class="col-sm-4 text-right">
-        <p class="text-secondary">Hecho por: <a href="www.linkedin.com/in/ismael-alexander-farias-7a64b520b">Ismael Farias</a> <a href="">Riberi Simon</a> <a href="">Gonzalez Emanuel</a>
+        <p class="text-secondary">Hecho por: <a href="https://www.linkedin.com/in/ismael-alexander-farias-7a64b520b" target="_blank" rel="noopener noreferrer" >Ismael Farias</a> <a href="">Riberi Simon</a> <a href="">Gonzalez Emanuel</a>
       </div>
     </div>
   </div>
@@ -306,4 +306,5 @@
     <script src="js-GIS/script.js"></script>
 </body>
 </html>
+
 
