link de linkedin

--- a/html-GIS/Proyecto.html
+++ b/html-GIS/Proyecto.html
@@ -221,7 +221,7 @@
         <p class="text-secondary mb-0">© 2025 Universidad Nacional de San Luis. Todos los derechos reservados.</p>
       </div>
       <div class="col-sm-4 text-right">
-        <p class="text-secondary">Hecho por: <a href="www.linkedin.com/in/ismael-alexander-farias-7a64b520b">Ismael Farias</a> <a href="">Riberi Simon</a> <a href="">Gonzalez Emanuel</a>
+        <p class="text-secondary">Hecho por: <a href="https://www.linkedin.com/in/ismael-alexander-farias-7a64b520b" target="_blank" >Ismael Farias</a> <a href="">Riberi Simon</a> <a href="">Gonzalez Emanuel</a>
       </div>
     </div>
   </div>
@@ -234,4 +234,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
