link de linkedin

--- a/html-GIS/Lacis.html
+++ b/html-GIS/Lacis.html
@@ -411,7 +411,7 @@
         <p class="text-secondary mb-0">© 2025 Universidad Nacional de San Luis. Todos los derechos reservados.</p>
       </div>
       <div class="col-sm-4 text-right">
-        <p class="text-secondary">Hecho por: <a href="https://www.linkedin.com/in/ismael-alexander-farias-7a64b520b" target="_blank" >Ismael Farias</a> <a href="">Riberi Simon</a> <a href="">Gonzalez Emanuel</a>
+        <p class="text-secondary">Hecho por: <a href="https://www.linkedin.com/in/ismael-alexander-farias-7a64b520b" target="_blank" rel="noopener noreferrer" >Ismael Farias</a> <a href="">Riberi Simon</a> <a href="">Gonzalez Emanuel</a>
       </div>
     </div>
   </div>
@@ -426,5 +426,6 @@
     <script src="../js-GIS/lacis.js"></script>
 </body>
 </html>
+
 
 
