cambio ubicacion del mapa

--- a/html-GIS/integrantes.html
+++ b/html-GIS/integrantes.html
@@ -172,7 +172,7 @@
       </div>
       <!-- Mapa -->
       <div class="col-sm-4 align-items-center  mt-3">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2358.2074909118564!2d-66.3393107656412!3d-33.29242710056197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95d4394ebb423809%3A0xfe094d67819458ba!2s2do%20Bloque%20FCFMyN%20-%20UNSL!5e0!3m2!1ses!2sar!4v1749560202155!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d833.7578096159137!2d-66.33956090446108!3d-33.291845731959555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95d4394ea3733e7d%3A0x97d6d6cdd5bc7546!2sDepartamento%20de%20Inform%C3%A1tica%20-%20FCFMyN%20-%20UNSL!5e0!3m2!1ses!2sar!4v1768354243401!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
       </div>
       
     </div>
